<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.awolf.businesstrade.fragment.HomeFragment">


    <LinearLayout
        style="@style/layout_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <WebView
                android:id="@+id/wv_home_ad"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            style="@style/layout_vertical"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/btn_1"
                style="@style/layout_horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:scaleType="fitXY"
                android:text="@string/market_metal"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_4"
                style="@style/layout_horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:scaleType="fitXY"
                android:text="@string/cargo"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_5"
                style="@style/layout_horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:scaleType="fitXY"
                android:text="@string/mine"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            style="@style/layout_vertical"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_3"
                style="@style/layout_horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:text="@string/market_wood"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_2"
                style="@style/layout_horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:text="@string/market_stone"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_6"
                style="@style/layout_horizontal"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:text=""
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
